--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
+    "@saas-ui/core": "^2.2.4",
+    "@saas-ui/react": "^2.4.4",
     "axios": "^1.6.2",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1"
   },
