--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,11 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-
-    "@mui/lab": "^5.0.0-alpha.156",
-    "@mui/material": "^5.15.0",
-
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.0",
+    "@mui/lab": "^5.0.0-alpha.156",
     "@mui/material": "^5.15.0",
     "@mui/styled-engine-sc": "^6.0.0-alpha.8",
-
     "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^1.9.7",
     "@saas-ui/core": "^2.2.4",
@@ -33,6 +29,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-monaco-editor": "^0.55.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
