--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "framer-motion": "^6.5.1",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -37,7 +38,6 @@
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1"
-
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
